--- a/SSD/SSD/Sample-Test1/Sample-Test1.vcxproj
+++ b/SSD/SSD/Sample-Test1/Sample-Test1.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{e1db8e2d-f3fc-4826-9fd1-320d31ce01bc}</ProjectGuid>
+    <ProjectGuid>{79d196b3-f514-474c-b7b5-b5c79c467dc4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0.22621.0</WindowsTargetPlatformVersion>
     <ConfigurationType>Application</ConfigurationType>
@@ -98,21 +98,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="..\packages\gmock.1.11.0\lib\native\src\gmock\src\gmock_main.cc" />
     <ClCompile Include="test.cpp" />
-    <ClCompile Include="pch.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CRA_SSDProject\CRA_SSDProject.vcxproj">
-      <Project>{d5e638e6-00b1-4b3f-87ab-608276222b74}</Project>
+    <ProjectReference Include="..\SSD\SSD.vcxproj">
+      <Project>{0e2a9901-a478-4ccf-bdd6-619c0753ad5f}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
