[FEAT] TestShell 관련 Exception 추가.
1. Exception 추가
2. 관련 writeWrongAddr TC Pass 구현

--- a/TestShell/TestShell/TestShell.vcxproj
+++ b/TestShell/TestShell/TestShell.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ProductInterface.h" />
     <ClCompile Include="TestShell.cpp" />
+    <ClCompile Include="TestShell_Execption.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-   </Project>
+</Project>
