--- a/SSD/SSD/SSD.vcxproj.filters
+++ b/SSD/SSD/SSD.vcxproj.filters
@@ -37,4 +37,9 @@
       <Filter>Command</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ssdexcept.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
