--- a/SSD/SSD/SSD.vcxproj
+++ b/SSD/SSD/SSD.vcxproj
@@ -138,6 +138,9 @@
     <ClCompile Include="ssd.cpp" />
     <ClCompile Include="Write.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ssdexcept.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
