--- a/SSD/SSD/SSD.vcxproj
+++ b/SSD/SSD/SSD.vcxproj
@@ -135,7 +135,7 @@
     <ClCompile Include="Invoker.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Read.cpp" />
-    <ClCompile Include="ssd.cpp" />
+    <ClCompile Include="storage.cpp" />
     <ClCompile Include="Write.cpp" />
   </ItemGroup>
   <ItemGroup>
