--- a/SSD/SSD/SSD.vcxproj.filters
+++ b/SSD/SSD/SSD.vcxproj.filters
@@ -18,7 +18,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ssd.cpp">
+    <ClCompile Include="storage.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
