Added SSD feature "Erase"

--- a/SSD/SSD/SSD.vcxproj
+++ b/SSD/SSD/SSD.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Erase.cpp" />
     <ClCompile Include="ICommand.h" />
     <ClCompile Include="Invoker.cpp" />
     <ClCompile Include="main.cpp" />
