Added flush skeleton and command

--- a/SSD/SSD/SSD.vcxproj
+++ b/SSD/SSD/SSD.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Erase.cpp" />
+    <ClCompile Include="Flush.cpp" />
     <ClCompile Include="ICommand.h" />
     <ClCompile Include="Invoker.cpp" />
     <ClCompile Include="main.cpp" />
