--- a/TestShell/TestShell/TestShell.vcxproj.filters
+++ b/TestShell/TestShell/TestShell.vcxproj.filters
@@ -25,10 +25,10 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ProductInterface.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>소스 파일\헤더 파일</Filter>
     </ClCompile>
     <ClCompile Include="TestShell_Exception.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>소스 파일\헤더 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
