--- a/TestShell/TestShell/TestShell.vcxproj.filters
+++ b/TestShell/TestShell/TestShell.vcxproj.filters
@@ -34,4 +34,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="run_list.lst">
+      <Filter>리소스 파일</Filter>
+    </None>
+  </ItemGroup>
 </Project>
