--- a/TestShell/TestShell/TestShell.vcxproj
+++ b/TestShell/TestShell/TestShell.vcxproj
@@ -141,8 +141,12 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ProductInterface.h" />
     <ClCompile Include="ReadCommand.cpp" />
+    <ClCompile Include="Runner.cpp" />
     <ClCompile Include="TestShell_Exception.h" />
     <ClCompile Include="WriteCommand.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="run_list.lst" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
