--- a/TestShell/TestShell/TestShell.vcxproj.filters
+++ b/TestShell/TestShell/TestShell.vcxproj.filters
@@ -30,12 +30,6 @@
     <ClCompile Include="TestShell_Exception.h">
       <Filter>소스 파일\헤더 파일</Filter>
     </ClCompile>
-    <ClCompile Include="ReadCommand.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="WriteCommand.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="EraseCommand.cpp">
       <Filter>소스 파일\Command</Filter>
     </ClCompile>
@@ -57,5 +51,19 @@
     <ClCompile Include="Invoker.cpp">
       <Filter>소스 파일\Command</Filter>
     </ClCompile>
+    <ClCompile Include="Runner.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ReadCommand.cpp">
+      <Filter>소스 파일\Command</Filter>
+    </ClCompile>
+    <ClCompile Include="WriteCommand.cpp">
+      <Filter>소스 파일\Command</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="run_list.lst">
+      <Filter>리소스 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
