--- a/TestShell/TestShell/TestShell.vcxproj
+++ b/TestShell/TestShell/TestShell.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="CommandParser.cpp" />
     <ClCompile Include="EraseCommand.cpp" />
     <ClCompile Include="EraseRangeCommand.cpp" />
+    <ClCompile Include="FlushCommand.cpp" />
     <ClCompile Include="FullReadCommand.cpp" />
     <ClCompile Include="FullWriteCommand.cpp" />
     <ClCompile Include="HelpCommand.cpp" />
