--- a/SSD/SSD/SSD.vcxproj.filters
+++ b/SSD/SSD/SSD.vcxproj.filters
@@ -42,9 +42,18 @@
     <ClCompile Include="Flush.cpp">
       <Filter>Command</Filter>
     </ClCompile>
+    <ClCompile Include="util.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ssdexcept.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Logger\Include\Logger.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
   </ItemGroup>
