--- a/TestShell/TestShell/TestShell.vcxproj
+++ b/TestShell/TestShell/TestShell.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="CommandParser.cpp" />
     <ClCompile Include="EraseCommand.cpp" />
     <ClCompile Include="EraseRangeCommand.cpp" />
+    <ClCompile Include="FullRead10AndCompare.cpp" />
     <ClCompile Include="FullReadCommand.cpp" />
     <ClCompile Include="FullWriteCommand.cpp" />
     <ClCompile Include="HelpCommand.cpp" />
@@ -146,6 +147,7 @@
     <ClCompile Include="TestApp1Command.cpp" />
     <ClCompile Include="TestApp2Command.cpp" />
     <ClCompile Include="TestShell_Exception.h" />
+    <ClCompile Include="Write10AndCompare.cpp" />
     <ClCompile Include="WriteCommand.cpp" />
   </ItemGroup>
   <ItemGroup>
