Added dll copy after build SSD

--- a/SSD/Sample-Test1/Sample-Test1.vcxproj
+++ b/SSD/Sample-Test1/Sample-Test1.vcxproj
@@ -69,6 +69,10 @@
       <AdditionalDependencies>../../Logger/Lib/LoggerLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>../../Logger/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>copy "$(SolutionDir)\..\Logger\Lib\LoggerLib.dll" "$(SolutionDir)\x64\Debug\";
+</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
